fix(search): fix search result card background in dark mode

--- a/src/components/Search.module.scss
+++ b/src/components/Search.module.scss
@@ -35,7 +35,7 @@
       display: flex;
       align-items: stretch;
       margin-bottom: 0.875rem;
-      background-color: rgb(var(--white-rgb));
+      background-color: rgb(var(--card-background-rgb));
       border: 1px solid rgb(var(--border-rgb));
       border-radius: 0.875rem;
       cursor: pointer;
