--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,7 +5,6 @@
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Arial", sans-serif;
   --font-rubik: 'Rubik', sans-serif;
 
-  --black-rgb: 0, 0, 0;
   --background-rgb: 251, 251, 251;
   --border-rgb: 215, 215, 215;
   --grey-1-rgba: 151, 151, 151, 1;
@@ -13,15 +12,15 @@
   --grey-3-rgba: 0, 0, 0, 0.5;
   --grey-4-rgba: 0, 0, 0, 0.6;
   --foreground-rgb: 74, 74, 74;
-  --white-rgb: 255, 255, 255;
+  --black-rgb: 0, 0, 0;
 
+  --card-background-rgb: 255, 255, 255;
   --primary-rgb: 103, 134, 211;
   --primary-dark-rgb: 72, 103, 180;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --black-rgb: 255, 255, 255;
     --background-rgb: 18, 18, 18;
     --border-rgb: 40, 40, 40;
     --grey-1-rgba: 104, 104, 104, 1;
@@ -29,8 +28,9 @@
     --grey-3-rgba: 255, 255, 255, 0.5;
     --grey-4-rgba: 255, 255, 255, 0.4;
     --foreground-rgb: 255, 255, 255;
-    --white-rgb: 0, 0, 0;
+    --black-rgb: 255, 255, 255;
 
+    --card-background-rgb: 59, 59, 59;
     --primary-rgb: 103, 134, 211;
     --primary-dark-rgb: 72, 103, 180;
   }
